sbp_parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = "\n",
        peg$c3 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c4 = function(s) {return s},
        peg$c5 = ",",
        peg$c6 = { type: "literal", value: ",", description: "\",\"" },
        peg$c7 = function(arg) {return arg},
        peg$c8 = function(m, args) {return {type:"cmd","cmd":m,"args":args};},
        peg$c9 = "END",
        peg$c10 = { type: "literal", value: "END", description: "\"END\"" },
        peg$c11 = "RETURN",
        peg$c12 = { type: "literal", value: "RETURN", description: "\"RETURN\"" },
        peg$c13 = function(name) {return {type:name.toLowerCase()}},
        peg$c14 = "IF",
        peg$c15 = { type: "literal", value: "IF", description: "\"IF\"" },
        peg$c16 = "THEN",
        peg$c17 = { type: "literal", value: "THEN", description: "\"THEN\"" },
        peg$c18 = function(cmp, stmt) { return {"type":"cond", "cmp":cmp, "stmt":stmt};},
        peg$c19 = "GOTO",
        peg$c20 = { type: "literal", value: "GOTO", description: "\"GOTO\"" },
        peg$c21 = "GOSUB",
        peg$c22 = { type: "literal", value: "GOSUB", description: "\"GOSUB\"" },
        peg$c23 = function(cmd, lbl) {return {type:cmd.toLowerCase(), label:lbl};},
        peg$c24 = "REM",
        peg$c25 = { type: "literal", value: "REM", description: "\"REM\"" },
        peg$c26 = "'",
        peg$c27 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c28 = /^[^\n]/,
        peg$c29 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c30 = function(cmt) {return {type:"comment", text: cmt.join("")}},
        peg$c31 = "",
        peg$c32 = "CA",
        peg$c33 = { type: "literal", value: "CA", description: "\"CA\"" },
        peg$c34 = "CC",
        peg$c35 = { type: "literal", value: "CC", description: "\"CC\"" },
        peg$c36 = "CG",
        peg$c37 = { type: "literal", value: "CG", description: "\"CG\"" },
        peg$c38 = "CP",
        peg$c39 = { type: "literal", value: "CP", description: "\"CP\"" },
        peg$c40 = "CR",
        peg$c41 = { type: "literal", value: "CR", description: "\"CR\"" },
        peg$c42 = "FC",
        peg$c43 = { type: "literal", value: "FC", description: "\"FC\"" },
        peg$c44 = "FE",
        peg$c45 = { type: "literal", value: "FE", description: "\"FE\"" },
        peg$c46 = "FG",
        peg$c47 = { type: "literal", value: "FG", description: "\"FG\"" },
        peg$c48 = "FP",
        peg$c49 = { type: "literal", value: "FP", description: "\"FP\"" },
        peg$c50 = "FS",
        peg$c51 = { type: "literal", value: "FS", description: "\"FS\"" },
        peg$c52 = "HA",
        peg$c53 = { type: "literal", value: "HA", description: "\"HA\"" },
        peg$c54 = "HB",
        peg$c55 = { type: "literal", value: "HB", description: "\"HB\"" },
        peg$c56 = "HC",
        peg$c57 = { type: "literal", value: "HC", description: "\"HC\"" },
        peg$c58 = "HE",
        peg$c59 = { type: "literal", value: "HE", description: "\"HE\"" },
        peg$c60 = "HN",
        peg$c61 = { type: "literal", value: "HN", description: "\"HN\"" },
        peg$c62 = "HQ",
        peg$c63 = { type: "literal", value: "HQ", description: "\"HQ\"" },
        peg$c64 = "HR",
        peg$c65 = { type: "literal", value: "HR", description: "\"HR\"" },
        peg$c66 = "HT",
        peg$c67 = { type: "literal", value: "HT", description: "\"HT\"" },
        peg$c68 = "HU",
        peg$c69 = { type: "literal", value: "HU", description: "\"HU\"" },
        peg$c70 = "HW",
        peg$c71 = { type: "literal", value: "HW", description: "\"HW\"" },
        peg$c72 = "J2",
        peg$c73 = { type: "literal", value: "J2", description: "\"J2\"" },
        peg$c74 = "J3",
        peg$c75 = { type: "literal", value: "J3", description: "\"J3\"" },
        peg$c76 = "J4",
        peg$c77 = { type: "literal", value: "J4", description: "\"J4\"" },
        peg$c78 = "J5",
        peg$c79 = { type: "literal", value: "J5", description: "\"J5\"" },
        peg$c80 = "JA",
        peg$c81 = { type: "literal", value: "JA", description: "\"JA\"" },
        peg$c82 = "JB",
        peg$c83 = { type: "literal", value: "JB", description: "\"JB\"" },
        peg$c84 = "JH",
        peg$c85 = { type: "literal", value: "JH", description: "\"JH\"" },
        peg$c86 = "JS",
        peg$c87 = { type: "literal", value: "JS", description: "\"JS\"" },
        peg$c88 = "JX",
        peg$c89 = { type: "literal", value: "JX", description: "\"JX\"" },
        peg$c90 = "JY",
        peg$c91 = { type: "literal", value: "JY", description: "\"JY\"" },
        peg$c92 = "JZ",
        peg$c93 = { type: "literal", value: "JZ", description: "\"JZ\"" },
        peg$c94 = "M2",
        peg$c95 = { type: "literal", value: "M2", description: "\"M2\"" },
        peg$c96 = "M3",
        peg$c97 = { type: "literal", value: "M3", description: "\"M3\"" },
        peg$c98 = "M4",
        peg$c99 = { type: "literal", value: "M4", description: "\"M4\"" },
        peg$c100 = "M5",
        peg$c101 = { type: "literal", value: "M5", description: "\"M5\"" },
        peg$c102 = "MA",
        peg$c103 = { type: "literal", value: "MA", description: "\"MA\"" },
        peg$c104 = "MB",
        peg$c105 = { type: "literal", value: "MB", description: "\"MB\"" },
        peg$c106 = "MD",
        peg$c107 = { type: "literal", value: "MD", description: "\"MD\"" },
        peg$c108 = "MH",
        peg$c109 = { type: "literal", value: "MH", description: "\"MH\"" },
        peg$c110 = "MO",
        peg$c111 = { type: "literal", value: "MO", description: "\"MO\"" },
        peg$c112 = "MS",
        peg$c113 = { type: "literal", value: "MS", description: "\"MS\"" },
        peg$c114 = "MX",
        peg$c115 = { type: "literal", value: "MX", description: "\"MX\"" },
        peg$c116 = "MY",
        peg$c117 = { type: "literal", value: "MY", description: "\"MY\"" },
        peg$c118 = "MZ",
        peg$c119 = { type: "literal", value: "MZ", description: "\"MZ\"" },
        peg$c120 = "RA",
        peg$c121 = { type: "literal", value: "RA", description: "\"RA\"" },
        peg$c122 = "RI",
        peg$c123 = { type: "literal", value: "RI", description: "\"RI\"" },
        peg$c124 = "RP",
        peg$c125 = { type: "literal", value: "RP", description: "\"RP\"" },
        peg$c126 = "RR",
        peg$c127 = { type: "literal", value: "RR", description: "\"RR\"" },
        peg$c128 = "RS",
        peg$c129 = { type: "literal", value: "RS", description: "\"RS\"" },
        peg$c130 = "RZ",
        peg$c131 = { type: "literal", value: "RZ", description: "\"RZ\"" },
        peg$c132 = "SA",
        peg$c133 = { type: "literal", value: "SA", description: "\"SA\"" },
        peg$c134 = "SF",
        peg$c135 = { type: "literal", value: "SF", description: "\"SF\"" },
        peg$c136 = "SI",
        peg$c137 = { type: "literal", value: "SI", description: "\"SI\"" },
        peg$c138 = "SK",
        peg$c139 = { type: "literal", value: "SK", description: "\"SK\"" },
        peg$c140 = "SL",
        peg$c141 = { type: "literal", value: "SL", description: "\"SL\"" },
        peg$c142 = "SM",
        peg$c143 = { type: "literal", value: "SM", description: "\"SM\"" },
        peg$c144 = "SO",
        peg$c145 = { type: "literal", value: "SO", description: "\"SO\"" },
        peg$c146 = "SP",
        peg$c147 = { type: "literal", value: "SP", description: "\"SP\"" },
        peg$c148 = "SR",
        peg$c149 = { type: "literal", value: "SR", description: "\"SR\"" },
        peg$c150 = "ST",
        peg$c151 = { type: "literal", value: "ST", description: "\"ST\"" },
        peg$c152 = "SV",
        peg$c153 = { type: "literal", value: "SV", description: "\"SV\"" },
        peg$c154 = "SW",
        peg$c155 = { type: "literal", value: "SW", description: "\"SW\"" },
        peg$c156 = "TC",
        peg$c157 = { type: "literal", value: "TC", description: "\"TC\"" },
        peg$c158 = "TD",
        peg$c159 = { type: "literal", value: "TD", description: "\"TD\"" },
        peg$c160 = "TF",
        peg$c161 = { type: "literal", value: "TF", description: "\"TF\"" },
        peg$c162 = "TH",
        peg$c163 = { type: "literal", value: "TH", description: "\"TH\"" },
        peg$c164 = "TS",
        peg$c165 = { type: "literal", value: "TS", description: "\"TS\"" },
        peg$c166 = "TT",
        peg$c167 = { type: "literal", value: "TT", description: "\"TT\"" },
        peg$c168 = "TU",
        peg$c169 = { type: "literal", value: "TU", description: "\"TU\"" },
        peg$c170 = "UD",
        peg$c171 = { type: "literal", value: "UD", description: "\"UD\"" },
        peg$c172 = "UL",
        peg$c173 = { type: "literal", value: "UL", description: "\"UL\"" },
        peg$c174 = "UN",
        peg$c175 = { type: "literal", value: "UN", description: "\"UN\"" },
        peg$c176 = "UR",
        peg$c177 = { type: "literal", value: "UR", description: "\"UR\"" },
        peg$c178 = "UU",
        peg$c179 = { type: "literal", value: "UU", description: "\"UU\"" },
        peg$c180 = "UV",
        peg$c181 = { type: "literal", value: "UV", description: "\"UV\"" },
        peg$c182 = "UZ",
        peg$c183 = { type: "literal", value: "UZ", description: "\"UZ\"" },
        peg$c184 = "VA",
        peg$c185 = { type: "literal", value: "VA", description: "\"VA\"" },
        peg$c186 = "VB",
        peg$c187 = { type: "literal", value: "VB", description: "\"VB\"" },
        peg$c188 = "VC",
        peg$c189 = { type: "literal", value: "VC", description: "\"VC\"" },
        peg$c190 = "VD",
        peg$c191 = { type: "literal", value: "VD", description: "\"VD\"" },
        peg$c192 = "VI",
        peg$c193 = { type: "literal", value: "VI", description: "\"VI\"" },
        peg$c194 = "VL",
        peg$c195 = { type: "literal", value: "VL", description: "\"VL\"" },
        peg$c196 = "VN",
        peg$c197 = { type: "literal", value: "VN", description: "\"VN\"" },
        peg$c198 = "VO",
        peg$c199 = { type: "literal", value: "VO", description: "\"VO\"" },
        peg$c200 = "VP",
        peg$c201 = { type: "literal", value: "VP", description: "\"VP\"" },
        peg$c202 = "VR",
        peg$c203 = { type: "literal", value: "VR", description: "\"VR\"" },
        peg$c204 = "VS",
        peg$c205 = { type: "literal", value: "VS", description: "\"VS\"" },
        peg$c206 = "VU",
        peg$c207 = { type: "literal", value: "VU", description: "\"VU\"" },
        peg$c208 = "Z2",
        peg$c209 = { type: "literal", value: "Z2", description: "\"Z2\"" },
        peg$c210 = "Z3",
        peg$c211 = { type: "literal", value: "Z3", description: "\"Z3\"" },
        peg$c212 = "Z4",
        peg$c213 = { type: "literal", value: "Z4", description: "\"Z4\"" },
        peg$c214 = "Z5",
        peg$c215 = { type: "literal", value: "Z5", description: "\"Z5\"" },
        peg$c216 = "ZA",
        peg$c217 = { type: "literal", value: "ZA", description: "\"ZA\"" },
        peg$c218 = "ZB",
        peg$c219 = { type: "literal", value: "ZB", description: "\"ZB\"" },
        peg$c220 = "ZT",
        peg$c221 = { type: "literal", value: "ZT", description: "\"ZT\"" },
        peg$c222 = "ZX",
        peg$c223 = { type: "literal", value: "ZX", description: "\"ZX\"" },
        peg$c224 = "ZY",
        peg$c225 = { type: "literal", value: "ZY", description: "\"ZY\"" },
        peg$c226 = "ZZ",
        peg$c227 = { type: "literal", value: "ZZ", description: "\"ZZ\"" },
        peg$c228 = "EP",
        peg$c229 = { type: "literal", value: "EP", description: "\"EP\"" },
        peg$c230 = function(code) {return code;},
        peg$c231 = /^[a-zA-Z_]/,
        peg$c232 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c233 = /^[A-Za-z0-9_]/,
        peg$c234 = { type: "class", value: "[A-Za-z0-9_]", description: "[A-Za-z0-9_]" },
        peg$c235 = function(id) {return id[0].join("");},
        peg$c236 = ":",
        peg$c237 = { type: "literal", value: ":", description: "\":\"" },
        peg$c238 = function(id) {return {type:"label", value:id};},
        peg$c239 = { type: "other", description: "integer" },
        peg$c240 = /^[0-9]/,
        peg$c241 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c242 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c243 = { type: "other", description: "float" },
        peg$c244 = null,
        peg$c245 = "-",
        peg$c246 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c247 = ".",
        peg$c248 = { type: "literal", value: ".", description: "\".\"" },
        peg$c249 = function(f) { return parseFloat(f.join(""));},
        peg$c250 = /^[^,\n]/,
        peg$c251 = { type: "class", value: "[^,\\n]", description: "[^,\\n]" },
        peg$c252 = function(s) {return s.join("");},
        peg$c253 = "&",
        peg$c254 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c255 = function(v) {return v.join("")},
        peg$c256 = "%",
        peg$c257 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c258 = "(",
        peg$c259 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c260 = ")",
        peg$c261 = { type: "literal", value: ")", description: "\")\"" },
        peg$c262 = "=",
        peg$c263 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c264 = function(v, e) {return {"type": "assign", "var":v, "expr":e}},
        peg$c265 = function(lhs, op, rhs) {return {'left' : lhs, 'right' : rhs, 'op' : op};},
        peg$c266 = function(first, rest) {
              return buildTree(first, rest);
            },
        peg$c267 = "*",
        peg$c268 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c269 = "/",
        peg$c270 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c271 = "+",
        peg$c272 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c273 = "<=",
        peg$c274 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c275 = ">=",
        peg$c276 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c277 = "==",
        peg$c278 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c279 = "<",
        peg$c280 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c281 = ">",
        peg$c282 = { type: "literal", value: ">", description: "\">\"" },
        peg$c283 = "!=",
        peg$c284 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c285 = function(expr) { return expr; },
        peg$c286 = /^[ \t]/,
        peg$c287 = { type: "class", value: "[ \\t]", description: "[ \\t]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsestatement();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s4 = peg$c2;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s1;
            s2 = peg$c4(s3);
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsestatement();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 10) {
              s4 = peg$c2;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s1;
              s2 = peg$c4(s3);
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$c1;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      }

      return s0;
    }

    function peg$parsestatement() {
      var s0;

      s0 = peg$parsecomment();
      if (s0 === peg$FAILED) {
        s0 = peg$parselabel();
        if (s0 === peg$FAILED) {
          s0 = peg$parsecommand();
          if (s0 === peg$FAILED) {
            s0 = peg$parsesingle();
            if (s0 === peg$FAILED) {
              s0 = peg$parsejump();
              if (s0 === peg$FAILED) {
                s0 = peg$parseassignment();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseconditional();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parse__();
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecommand() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsemnemonic();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 44) {
          s4 = peg$c5;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseargument();
          if (s5 !== peg$FAILED) {
            peg$reportedPos = s3;
            s4 = peg$c7(s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c1;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c1;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 44) {
            s4 = peg$c5;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseargument();
            if (s5 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c7(s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c1;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c1;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c8(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsesingle() {
      var s0, s1;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c9) {
        s1 = peg$c9;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c11) {
          s1 = peg$c11;
          peg$currPos += 6;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c13(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseconditional() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c14) {
        s1 = peg$c14;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse___();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecomparison();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse___();
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 4) === peg$c16) {
                s5 = peg$c16;
                peg$currPos += 4;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c17); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse___();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsecommand();
                  if (s7 === peg$FAILED) {
                    s7 = peg$parseassignment();
                    if (s7 === peg$FAILED) {
                      s7 = peg$parsejump();
                    }
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c18(s3, s7);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsejump() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c19) {
        s1 = peg$c19;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 5) === peg$c21) {
          s1 = peg$c21;
          peg$currPos += 5;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c22); }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse___();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseidentifier();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c23(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsecomment() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c24) {
        s1 = peg$c24;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }
      if (s1 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 39) {
          s1 = peg$c26;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c27); }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (peg$c28.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c29); }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          if (peg$c28.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c29); }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c30(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseargument() {
      var s0;

      s0 = peg$parsefloat();
      if (s0 === peg$FAILED) {
        s0 = peg$parseinteger();
        if (s0 === peg$FAILED) {
          s0 = peg$parseexpression();
          if (s0 === peg$FAILED) {
            s0 = peg$parsebarestring();
            if (s0 === peg$FAILED) {
              s0 = peg$c31;
            }
          }
        }
      }

      return s0;
    }

    function peg$parsemnemonic() {
      var s0, s1;
